# c

./: build_template.zig  newProject.sh
dek/: a.out  epaper.FCStd
lvLinux/: lv_conf.h
lvgl_desktop/: compile_commands.json  output.txt  platformio.ini
lvgl_desktop/.cache/clangd/index/: _lv_cache_lru_rb.c.A74724B6C990C4C2.idx  _lv_cache_lru_rb.h.B759AED2EE282F77.idx  app_hal.c.9304036FA3BF9DCB.idx  app_hal.h.CA09F2EFEDD90B13.idx  code128.c.50F451C43E0BC202.idx  font_multilang_large.c.46270BB4ED9E76C5.idx  gifdec.c.5C5DB11721C80C61.idx  (+656 more)
lvgl_desktop/src/: GohuFont_14.c  GohuFont_14_smol.c  fontawesome.c  main.c  main.old
lvglrepo/src/font/: lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_12_subpx.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_38.c  lv_font_montserrat_40.c  lv_font_montserrat_42.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_montserrat_8.c  lv_font_simsun_14_cjk.c  lv_font_simsun_16_cjk.c
qtWispr/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtWispr.pro  resources.qrc
qtWispr/.cache/clangd/index/: main.cpp.F2F56EA97CB3EE8B.idx  mainwindow.cpp.7275E42F499BF862.idx  mainwindow.h.9BBC6C8372429570.idx
ss/: CMakeLists.txt
wisprComp/: Makefile  main.c
